respnavbar sidenav fix, body xoverflow-wowjs hez

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -32,6 +32,7 @@ body{
   background-color: #007d72;
 }
 body {
+	overflow-x:hidden;
   }
 h1,h2,h3,h4,h5 {
 	font-family: $big-parallax-font;
